<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VacinasDisponiveisActivity">

    <TextView
        android:id="@+id/textView70"
        android:layout_width="265dp"
        android:layout_height="49dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="84dp"
        android:background="#0000CD"
        android:text="@string/vacinas_dispon_veis"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="101dp"
        android:layout_height="96dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/estvacina" />

    <TextView
        android:id="@+id/textView76"
        android:layout_width="379dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="196dp"
        android:background="#B0C4DE"
        android:text="@string/us_139_distrito_sanitario_vii_recife"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView77"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:text="@string/astrangenica"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView76" />

    <TextView
        android:id="@+id/textView95"
        android:layout_width="46dp"
        android:layout_height="18dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="64dp"
        android:text="@string/_10_000"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView76" />

    <TextView
        android:id="@+id/textView97"
        android:layout_width="46dp"
        android:layout_height="18dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="64dp"
        android:text="@string/_11_000"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView76" />

    <TextView
        android:id="@+id/textView101"
        android:layout_width="46dp"
        android:layout_height="18dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="64dp"
        android:text="@string/_11_000"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView76" />

    <TextView
        android:id="@+id/textView102"
        android:layout_width="46dp"
        android:layout_height="18dp"
        android:layout_marginStart="292dp"
        android:layout_marginTop="64dp"
        android:text="@string/_5_000"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView76" />

    <TextView
        android:id="@+id/textView78"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="48dp"
        android:text="@string/coronavac"
        android:textColor="#000000"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView76" />

    <TextView
        android:id="@+id/textView90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="292dp"
        android:layout_marginTop="48dp"
        android:text="@string/pfizer"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView76" />
</androidx.constraintlayout.widget.ConstraintLayout>